
# cmake ../NS -A Win32

cmake_minimum_required(VERSION 3.13)

project(NS)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
set(CMAKE_DISABLE_SOURCE_CHANGES ON)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

add_subdirectory(main/source)
