add_subdirectory(includes)

add_library(avh_server INTERFACE)
target_compile_definitions(avh_server INTERFACE
    -DAVH_SERVER
    -DAVH_NO_NEXUS
    -DUSE_OLDAUTH
)

add_library(avh_client INTERFACE)
target_compile_definitions(avh_client INTERFACE
    -DAVH_CLIENT
    -DUSE_NETWORK_METERING
    -DUSE_OLDAUTH
)

add_library(playtest INTERFACE)
target_compile_definitions(avh_client INTERFACE
    -DAVH_SECURE_PRERELEASE_BUILD
)

add_subdirectory(public)
add_subdirectory(common)
#add_subdirectory(pm_shared) # AVH CLIENT/SERVER
add_subdirectory(particles)
#add_subdirectory(game_shared)
#add_subdirectory(mod)

add_library(ns SHARED
    dlls/activity.h
    dlls/activitymap.h
    dlls/animation.h
    dlls/basemonster.h
    dlls/cbase.h
    dlls/cdll_dll.h
    dlls/client.h
    dlls/decals.h
    dlls/defaultai.h
    dlls/doors.h
    dlls/effects.h
    engine/eiface.h
    dlls/enginecallback.h
    dlls/explode.h
    dlls/extdll.h
    dlls/flyingmonster.h
    dlls/func_break.h
    dlls/gamerules.h
    dlls/hornet.h
    dlls/items.h
    dlls/monsterevent.h
    dlls/monsters.h
    dlls/nodes.h
    dlls/plane.h
    dlls/player.h

    pm_shared/pm_debug.h
    pm_shared/pm_defs.h
    pm_shared/pm_info.h
    pm_shared/pm_materials.h
    pm_shared/pm_movevars.h
    pm_shared/pm_shared.h

    dlls/saverestore.h
    dlls/schedule.h
    dlls/scripted.h
    dlls/scriptevent.h
    dlls/skill.h
    dlls/soundent.h
    dlls/spectator.h
    dlls/squadmonster.h
    dlls/talkmonster.h
    dlls/teamplay_gamerules.h
    dlls/trains.h
    dlls/util.h
    dlls/vector.h
    dlls/weapons.h

    mod/AvHParticleConstants.h
    mod/AvHParticleSystem.cpp
    mod/AvHParticleSystem.h
    mod/AvHParticleSystemEntity.cpp
    mod/AvHParticleSystemEntity.h
    mod/AvHParticleSystemManager.cpp
    mod/AvHParticleSystemManager.h
    mod/AvHParticleTemplate.cpp
    mod/AvHParticleTemplate.h
    mod/AvHParticleTemplateServer.cpp
    mod/AvHParticleTemplateServer.h

    mod/AvHAcidRocketGun.cpp
    mod/AvHAlienAbilities.cpp
    mod/AvHAlienAbilities.h
    mod/AvHAlienWeaponConstants.h
    mod/AvHAlienWeapons.h
    mod/AvHBasePlayerWeapon.cpp
    mod/AvHBasePlayerWeapon.h
    mod/AvHBileBombGun.cpp
    mod/AvHBite.cpp
    mod/AvHBite2.cpp
    mod/AvHBlink.cpp
    mod/AvHBuildingGun.cpp
    mod/AvHClaws.cpp
    mod/AvHDevour.cpp
    mod/AvHDivineWind.cpp
    mod/AvHGrenade.cpp
    mod/AvHGrenadeGun.cpp
    mod/AvHHealingSpray.cpp
    mod/AvHHeavyMachineGun.cpp
    mod/AvHItemInfo.cpp
    mod/AvHKnife.cpp
    mod/AvHMachineGun.cpp
    mod/AvHMarineEquipmentConstants.h
    mod/AvHMarineWeaponConstants.h
    mod/AvHMarineWeapons.h
    mod/AvHMetabolize.cpp
    mod/AvHMine.cpp
    mod/AvHParasiteGun.cpp
    mod/AvHPistol.cpp
    mod/AvHPrimalScream.cpp
    mod/AvHSonicGun.cpp
    mod/AvHSpikeGun.cpp
    mod/AvHSpitGun.cpp
    mod/AvHSpores.cpp
    mod/AvHStomp.cpp
    mod/AvHSwipe.cpp
    mod/AvHUmbraGun.cpp
    mod/AvHWebSpinner.cpp
    mod/AvHWelder.cpp
    dlls/ggrenade.cpp

    mod/AnimationUtil.cpp
    mod/AnimationUtil.h
    mod/AvHAlienEquipment.cpp
    mod/AvHAlienEquipment.h
    mod/AvHAlienEquipmentConstants.h
    mod/AvHAlienTurret.cpp
    mod/AvHAlienTurret.h
    mod/AvHAlienWeapon.cpp
    mod/AvHAlienWeapon.h
    mod/AvHAssert.cpp
    mod/AvHBaseBuildable.cpp
    mod/AvHBaseBuildable.h
    mod/AvHBaseInfoLocation.cpp
    mod/AvHBaseInfoLocation.h
    mod/AvHBuildable.cpp
    mod/AvHBuildable.h
    mod/AvHCloakable.cpp
    mod/AvHCloakable.h
    mod/AvHCombat.cpp
    mod/AvHCommandConstants.h
    mod/AvHConsoleCommands.cpp
    mod/AvHConstants.cpp
    mod/AvHConstants.h
    mod/AvHCurl.cpp
    mod/AvHEntities.cpp
    mod/AvHEntities.h
    mod/AvHEntityHierarchy.cpp
    mod/AvHEntityHierarchy.h
    mod/AvHGamerules.cpp
    mod/AvHGamerules.h
    mod/AvHHive.cpp
    mod/AvHHive.h
    mod/AvHMapExtents.cpp
    mod/AvHMapExtents.h
    mod/AvHMarineEquipment.cpp
    mod/AvHMarineEquipment.h
    mod/AvHMarineTurret.cpp
    mod/AvHMarineTurret.h
    mod/AvHMarineWeapon.cpp
    mod/AvHMarineWeapon.h
    mod/AvHMiniMap.cpp
    mod/AvHMiniMap.h
    mod/AvHMovementUtil.cpp
    mod/AvHMovementUtil.h
    mod/AvHNetworkMessages.cpp
    mod/AvHNetworkMessages.h
    mod/AvHNexusServer.cpp
    mod/AvHNexusServer.h
    mod/AvHNexusTunnelToClient.cpp
    mod/AvHNexusTunnelToClient.h
    mod/AvHOrder.cpp
    mod/AvHOrder.h
    mod/AvHPlayer.cpp
    mod/AvHPlayer.h
    mod/AvHPlayerUpgrade.cpp
    mod/AvHPlayerUpgrade.h
    mod/AvHPushableBuildable.cpp
    mod/AvHPushableBuildable.h
    mod/AvHReinforceable.cpp
    mod/AvHReinforceable.h
    mod/AvHResearchManager.cpp
    mod/AvHResearchManager.h
    mod/AvHScriptManager.cpp
    mod/AvHScriptManager.h
    mod/AvHScriptServer.cpp
    mod/AvHScriptShared.cpp
    mod/AvHSelectionHelper.cpp
    mod/AvHSelectionHelper.h
    mod/AvHServerPlayerData.cpp
    mod/AvHServerPlayerData.h
    mod/AvHServerUtil.cpp
    mod/AvHServerUtil.h
    mod/AvHServerVariables.h
    mod/AvHSharedMovementInfo.cpp
    mod/AvHSharedMovementInfo.h
    mod/AvHSharedTypes.h
    mod/AvHSharedUtil.cpp
    mod/AvHSharedUtil.h
    mod/AvHSiegeTurret.cpp
    mod/AvHSiegeTurret.h
    mod/AvHSoundListManager.cpp
    mod/AvHSoundListManager.h
    mod/AvHSpawn.cpp
    mod/AvHSpawn.h
    mod/AvHSpecials.cpp
    mod/AvHSpecials.h
    mod/AvHTeam.cpp
    mod/AvHTeam.h
    mod/AvHTechNode.cpp
    mod/AvHTechNode.h
    mod/AvHTechSlotManager.cpp
    mod/AvHTechSlotManager.h
    mod/AvHTechTree.cpp
    mod/AvHTechTree.h
    mod/AvHTurret.cpp
    mod/AvHTurret.h
    mod/AvHVisibleBlipList.cpp
    mod/AvHVisibleBlipList.h
    mod/AvHVoiceHelper.cpp
    mod/AvHVoiceHelper.h
    mod/AvHWeldable.cpp
    mod/AvHWeldable.h
    mod/AvHWorldUpdate.cpp
    mod/CollisionChecker.cpp
    mod/CollisionChecker.h
    mod/CollisionChecker_ServerOnly.cpp
    mod/CollisionUtil.cpp
    mod/CollisionUtil.h
    mod/NetworkMeter.cpp
    mod/NetworkMeter.h

    dlls/animating.cpp
    dlls/animation.cpp
    dlls/bmodels.cpp
    dlls/buttons.cpp
    dlls/cbase.cpp
    dlls/client.cpp
    dlls/combat.cpp
    dlls/doors.cpp
    dlls/egon.cpp
    dlls/effects.cpp
    dlls/explode.cpp
    dlls/func_break.cpp
    dlls/func_tank.cpp
    dlls/game.cpp
    dlls/gamerules.cpp
    dlls/gauss.cpp
    dlls/globals.cpp
    dlls/h_ai.cpp
    dlls/h_battery.cpp
    dlls/h_cycler.cpp
    dlls/h_export.cpp
    dlls/items.cpp
    dlls/lights.cpp
    dlls/maprules.cpp
    dlls/mpstubb.cpp
    dlls/multiplay_gamerules.cpp
    dlls/observer.cpp
    dlls/pathcorner.cpp
    dlls/plane.cpp
    dlls/plats.cpp
    dlls/player.cpp

    dlls/compatibility.cpp

    pm_shared/pm_debug.cpp
    pm_shared/pm_math.cpp
    pm_shared/pm_shared.cpp

    dlls/satchel.cpp
    dlls/shotgun.cpp
    dlls/singleplay_gamerules.cpp
    dlls/skill.cpp
    dlls/sound.cpp
    dlls/soundent.cpp
    dlls/spectator.cpp
    dlls/squeakgrenade.cpp
    dlls/subs.cpp
    dlls/teamplay_gamerules.cpp
    dlls/triggers.cpp
    dlls/turret.cpp
    dlls/util.cpp

    game_shared/voice_banmgr.cpp
    game_shared/voice_gamemgr.cpp

    dlls/weapons.cpp
    dlls/world.cpp
    dlls/xen.cpp

    textrep/TRDescription.cpp
    textrep/TRDescription.h
    textrep/TRFactory.cpp
    textrep/TRFactory.h
    textrep/TRTag.h
    textrep/TRTagValuePair.h

    util/Balance.cpp
    util/Balance.h
    util/Checksum.cpp
    util/Checksum.h

    util/CString.h
    util/GammaTable.cpp
    util/GammaTable.h
    util/LinuxSupport.cpp
    util/LinuxSupport.h
    util/Mat3.cpp
    util/Mat3.h
    util/MathUtil.cpp
    util/MathUtil.h
    util/nowarnings.h
    util/Quat.cpp
    util/Quat.h
    util/Stacktrace.cpp
    util/Stacktrace.h
    util/STLUtil.cpp
    util/STLUtil.h
    util/StringVector.h
    util/Tokenizer.cpp
    util/Tokenizer.h
    util/Zassert.cpp
    util/Zassert.h
    util/ZassertTemplate.cpp

)
target_link_libraries(ns
    avh_server
    curl
    particles
    winmm.lib
    legacy_stdio_definitions.lib # TODO: The pre-build libcurl requires this, let's see if we can remove it
)
target_include_directories(ns PRIVATE
    .
    public
    common
    util
    engine
)
target_compile_options(ns PRIVATE
    /MP
)
set_target_properties(ns PROPERTIES
    LINK_FLAGS "/SUBSYSTEM:WINDOWS /DYNAMICBASE:NO /NODEFAULTLIB:\"gdi32.lib user32.lib\" /DEF:\"${CMAKE_CURRENT_SOURCE_DIR}/dlls/hl.def\"" # TODO: /WX"
)

if(WIN32)
    add_library(client SHARED
        cl_dll/ammo.h
        cl_dll/ammohistory.h
        cl_dll/camera.h
        cl_dll/chud.h
        cl_dll/chudmisc.h
        cl_dll/cl_dll.h
        cl_dll/com_weapons.h
        cl_dll/demo.h
        cl_dll/ev_hldm.h
        cl_dll/eventscripts.h
        cl_dll/GameStudioModelRenderer.h
        cl_dll/health.h
        cl_dll/hud.h
        cl_dll/hud_crosshairs.h
        cl_dll/hud_iface.h
        cl_dll/hud_servers.h
        cl_dll/hud_servers_priv.h
        cl_dll/hud_spectator.h
        cl_dll/hudgl.h
        cl_dll/in_defs.h
        cl_dll/kbutton.h
        cl_dll/overview.h
        cl_dll/parsemsg.h
        cl_dll/studio_util.h
        cl_dll/StudioModelRenderer.h
        cl_dll/util_vector.h
        cl_dll/view.h
        cl_dll/wrect.h

        common/itrackeruser.h

        cl_dll/vgui_ConsolePanel.h
        cl_dll/vgui_ControlConfigPanel.h
        cl_dll/vgui_int.h
        cl_dll/vgui_SchemeManager.h
        cl_dll/vgui_ScorePanel.h
        cl_dll/vgui_ServerBrowser.h
        cl_dll/vgui_TeamFortressViewport.h

        game_shared/bitvec.h
        game_shared/vgui_checkbutton2.h
        game_shared/vgui_defaultinputsignal.h
        game_shared/vgui_grid.h
        game_shared/vgui_helpers.h
        game_shared/vgui_listbox.h
        game_shared/vgui_loadtga.h
        game_shared/vgui_scrollbar2.h
        game_shared/vgui_slider2.h
        game_shared/voice_common.h
        game_shared/voice_status.h
        game_shared/voice_vgui_tweakdlg.h

        pm_shared/pm_debug.h
        pm_shared/pm_defs.h
        pm_shared/pm_info.h
        pm_shared/pm_materials.h
        pm_shared/pm_movevars.h
        pm_shared/pm_shared.h

        mod/AvHParticleSystem.cpp
        mod/AvHParticleSystem.h
        mod/AvHParticleSystemManager.cpp
        mod/AvHParticleSystemManager.h
        mod/AvHParticleTemplate.cpp
        mod/AvHParticleTemplate.h
        mod/AvHParticleTemplateClient.cpp
        mod/AvHParticleTemplateClient.h
        mod/AvHSelectionHelper.cpp
        mod/AvHSelectionHelper.h

        mod/AnimationUtil.cpp
        mod/AnimationUtil.h
        mod/AvHActionButtons.cpp
        mod/AvHActionButtons.h
        mod/AvHAlienWeapon.cpp
        mod/AvHAlienWeapon.h
        mod/AvHAmbientSound.cpp
        mod/AvHAmbientSound.h
        #mod/AvHAssert.cpp
        mod/AvHBaseInfoLocation.cpp
        mod/AvHBaseInfoLocation.h
        mod/AvHClientUtil.cpp
        mod/AvHClientUtil.h
        mod/AvHCommanderModeHandler.cpp
        mod/AvHCommanderModeHandler.h
        mod/AvHConstants.cpp
        mod/AvHConstants.h
        mod/AvHEntityHierarchy.cpp
        mod/AvHEntityHierarchy.h
        mod/AvHEvents.cpp
        mod/AvHFont.cpp
        mod/AvHFont.h
        mod/AvHHelp.cpp
        mod/AvHHud.cpp
        mod/AvHHud.h
        mod/AvHHudConstants.h
        mod/AvHHudRender.cpp
        mod/AvHLogoutComponent.cpp
        mod/AvHLogoutComponent.h
        mod/AvHMapExtents.cpp
        mod/AvHMapExtents.h
        mod/AvHMinimap.cpp
        mod/AvHMinimap.h
        mod/AvHMovementUtil.cpp
        mod/AvHMovementUtil.h
        mod/AvHNetworkMessages.cpp
        mod/AvHNetworkMessages.h
        mod/AvHNexusClient.cpp
        mod/AvHNexusClient.h
        mod/AvHNexusTunnelToServer.cpp
        mod/AvHNexusTunnelToServer.h
        mod/AvHOrder.cpp
        mod/AvHOrder.h
        mod/AvHOverviewControl.cpp
        mod/AvHOverviewControl.h
        mod/AvHOverviewMap.cpp
        mod/AvHOverviewMap.h
        mod/AvHParticleEditorHandler.cpp
        mod/AvHParticleEditorHandler.h
        mod/AvHPieMenuHandler.cpp
        mod/AvHPieMenuHandler.h
        mod/AvHPlayerUpgrade.cpp
        mod/AvHPlayerUpgrade.h
        mod/AvHScriptClient.cpp
        mod/AvHScriptManager.cpp
        mod/AvHScriptManager.h
        mod/AvHScriptShared.cpp
        mod/AvHScrollHandler.cpp
        mod/AvHScrollHandler.h
        mod/AvHScrollPanel.cpp
        mod/AvHSharedMovementInfo.cpp
        mod/AvHSharedMovementInfo.h
        mod/AvHSharedUtil.cpp
        mod/AvHSharedUtil.h
        mod/AvHSpecials.cpp
        mod/AvHSpecials.h
        mod/AvHSpriteAPI.cpp
        mod/AvHSpriteAPI.h
        mod/AvHTeamHierarchy.cpp
        mod/AvHTeamHierarchy.h
        mod/AvHTechImpulsePanel.cpp
        mod/AvHTechImpulsePanel.h
        mod/AvHTechNode.cpp
        mod/AvHTechNode.h
        mod/AvHTechSlotManager.cpp
        mod/AvHTechTree.cpp
        mod/AvHTechTree.h
        mod/AvHTitles.h
        mod/AvHTooltip.cpp
        mod/AvHTooltip.h
        mod/AvHUIFactory.cpp
        mod/AvHUIFactory.h
        mod/AvHVisibleBlipList.cpp
        mod/AvHVisibleBlipList.h
        mod/CollisionChecker.cpp
        mod/CollisionChecker.h
        mod/CollisionUtil.cpp
        mod/CollisionUtil.h

        ui/InvisiblePanel.cpp
        ui/InvisiblePanel.h

        mod/AvHAcidRocketGun.cpp
        mod/AvHAlienAbilities.cpp
        mod/AvHAlienAbilities.h
        mod/AvHAlienWeaponConstants.h
        mod/AvHAlienWeapons.h
        mod/AvHBasePlayerWeapon.cpp
        mod/AvHBasePlayerWeaponConstants.h
        mod/AvHBileBombGun.cpp
        mod/AvHBite.cpp
        mod/AvHBite2.cpp
        mod/AvHBlink.cpp
        mod/AvHClaws.cpp
        mod/AvHDevour.cpp
        mod/AvHDivineWind.cpp
        mod/AvHGrenade.cpp
        mod/AvHGrenadeGun.cpp
        mod/AvHHealingSpray.cpp
        mod/AvHHeavyMachineGun.cpp
        mod/AvHItemInfo.cpp
        mod/AvHKnife.cpp
        mod/AvHMachineGun.cpp
        mod/AvHMarineWeapon.cpp
        mod/AvHMarineWeapon.h
        mod/AvHMarineWeaponConstants.h
        mod/AvHMarineWeapons.h
        mod/AvHMetabolize.cpp
        mod/AvHMine.cpp
        mod/AvHParasiteGun.cpp
        mod/AvHPistol.cpp
        mod/AvHPrimalScream.cpp
        mod/AvHSonicGun.cpp
        mod/AvHSpikeGun.cpp
        mod/AvHSpitGun.cpp
        mod/AvHSpores.cpp
        mod/AvHStomp.cpp
        mod/AvHSwipe.cpp
        mod/AvHUmbraGun.cpp
        mod/AvHWebSpinner.cpp
        mod/AvHWelder.cpp

        cl_dll/cl_util.cpp
        cl_dll/ev_hldm.cpp
        cl_dll/hl/hl_baseentity.cpp
        cl_dll/hl/hl_objects.cpp
        cl_dll/hl/hl_weapons.cpp

        dlls/hl_wpn_glock.cpp

        cl_dll/ammo.cpp
        cl_dll/ammo_secondary.cpp
        cl_dll/ammohistory.cpp
        cl_dll/battery.cpp
        cl_dll/cdll_int.cpp
        cl_dll/com_weapons.cpp
        cl_dll/death.cpp
        cl_dll/demo.cpp
        cl_dll/entity.cpp
        cl_dll/ev_common.cpp
        cl_dll/events.cpp
        cl_dll/flashlight.cpp
        cl_dll/GameStudioModelRenderer.cpp
        cl_dll/geiger.cpp
        cl_dll/health.cpp
        cl_dll/hud.cpp
        cl_dll/hud_crosshairs.cpp
        cl_dll/hud_msg.cpp
        cl_dll/hud_redraw.cpp
        cl_dll/hud_servers.cpp
        cl_dll/hud_spectator.cpp
        cl_dll/hud_update.cpp
        cl_dll/hudgl.cpp
        cl_dll/in_camera.cpp
        cl_dll/input.cpp
        cl_dll/inputw32.cpp
        cl_dll/menu.cpp
        cl_dll/message.cpp
        cl_dll/parsemsg.cpp
        cl_dll/saytext.cpp
        cl_dll/status_icons.cpp
        cl_dll/statusbar.cpp
        cl_dll/studio_util.cpp
        cl_dll/StudioModelRenderer.cpp
        cl_dll/text_message.cpp
        cl_dll/train.cpp
        cl_dll/tri.cpp
        cl_dll/util.cpp
        cl_dll/view.cpp

        common/interface.cpp

        cl_dll/vgui_ClassMenu.cpp
        cl_dll/vgui_ConsolePanel.cpp
        cl_dll/vgui_ControlConfigPanel.cpp
        cl_dll/vgui_CustomObjects.cpp
        cl_dll/vgui_int.cpp
        cl_dll/vgui_MOTDWindow.cpp
        cl_dll/vgui_SchemeManager.cpp
        cl_dll/vgui_ScorePanel.cpp
        cl_dll/vgui_ServerBrowser.cpp
        cl_dll/vgui_SpectatorPanel.cpp
        cl_dll/vgui_TeamFortressViewport.cpp
        cl_dll/vgui_teammenu.cpp

        game_shared/vgui_checkbutton2.cpp
        game_shared/vgui_grid.cpp
        game_shared/vgui_helpers.cpp
        game_shared/vgui_listbox.cpp
        game_shared/vgui_loadtga.cpp
        game_shared/vgui_scrollbar2.cpp
        game_shared/vgui_slider2.cpp
        game_shared/voice_banmgr.cpp
        game_shared/voice_status.cpp
        game_shared/voice_vgui_tweakdlg.cpp

        pm_shared/pm_debug.cpp
        pm_shared/pm_math.cpp
        pm_shared/pm_shared.cpp


        ui/bitmappng.cpp
        ui/bitmappng.h
        ui/ChatPanel.cpp
        ui/ChatPanel.h
        ui/ColoredPanel.cpp
        ui/ColoredPanel.h
        ui/DummyPanel.cpp
        ui/FadingImageLabel.cpp
        ui/FadingImageLabel.h
        ui/loadpng.cpp
        ui/loadpng.h
        ui/MarqueeComponent.cpp
        ui/MarqueeComponent.h
        ui/MemoryInputStream.cpp
        ui/MemoryInputStream.h
        ui/PieMenu.cpp
        ui/PieMenu.h
        ui/PieNode.cpp
        ui/PieNode.h
        ui/ReloadableComponent.h
        ui/ScoreboardIcon.cpp
        ui/ScoreboardIcon.h
        ui/SliderPlus.cpp
        ui/SliderPlus.h
        ui/SpritePanel.cpp
        ui/SpritePanel.h
        ui/StaticLabel.h
        ui/UIComponent.cpp
        ui/UIComponent.h
        ui/UIComponents.cpp
        ui/UIComponents.h
        ui/UIFactory.cpp
        ui/UIFactory.h
        ui/UIHud.cpp
        ui/UIHud.h
        ui/UIManager.cpp
        ui/UIManager.h
        ui/UIPieMenu.cpp
        ui/UIPieMenu.h
        ui/UIUtil.cpp
        ui/UIUtil.h

        textrep/TRDescription.cpp
        textrep/TRDescription.h
        textrep/TRFactory.cpp
        textrep/TRFactory.h
        textrep/TRTag.h
        textrep/TRTagValuePair.h

        util/Balance.cpp
        util/Balance.h
        util/Checksum.cpp
        util/Checksum.h
        util/CString.h
        util/GammaTable.cpp
        util/GammaTable.h
        util/LinuxSupport.cpp
        util/LinuxSupport.h
        util/Mat3.cpp
        util/Mat3.h
        util/MathUtil.cpp
        util/MathUtil.h
        util/nowarnings.h
        util/Quat.cpp
        util/Quat.h
        util/Stacktrace.cpp
        util/Stacktrace.h
        util/STLUtil.cpp
        util/STLUtil.h
        util/StringVector.h
        util/Tokenizer.cpp
        util/Tokenizer.h
    )
    target_link_libraries(client
        avh_client
        libpng
        particles
        VGUI
        ${CMAKE_CURRENT_SOURCE_DIR}/lib/public/SDL2.lib
        opengl32.lib
        wsock32.lib
        #fmod

        #winmm.lib
        #legacy_stdio_definitions.lib # TODO: The pre-build libcurl requires this, let's see if we can remove it
    )
    target_include_directories(client PRIVATE
        .
        public
        game_shared
        ui
        cl_dll
        dlls
        mod
        util
        pm_shared
        external
        engine
        includes/fmod/inc
    )
    target_compile_options(client PRIVATE
        /MP
    )
    set_target_properties(client PROPERTIES
        LINK_FLAGS "/SUBSYSTEM:WINDOWS /DYNAMICBASE:NO" # /NODEFAULTLIB:\"gdi32.lib user32.lib\" /DEF:\"${CMAKE_CURRENT_SOURCE_DIR}/dlls/hl.def\"" # TODO: /WX"
    )
    #set_target_properties(client PROPERTIES
    #    LINK_FLAGS "/SUBSYSTEM:WINDOWS /DYNAMICBASE:NO /NODEFAULTLIB:\"gdi32.lib user32.lib\" /DEF:\"${CMAKE_CURRENT_SOURCE_DIR}/dlls/hl.def\"" # TODO: /WX"
    #)

endif()